# multi-obj-adaptive-learning-algorithm

./: .gitignore  LICENSE  README.md  pyproject.toml
adaptive_algorithm/config/: settings.py
adaptive_algorithm/core/: __init__.py  algorithm.py  knowledge_tracing.py  scoring.py
adaptive_algorithm/models/: __init__.py  content.py  schemas.py  student.py
