[project]
name = "multi-obj-algorithm"
version = "0.1.0"
description = "A Multi-Objective Adaptive Learning Algorithm: A Synthesis of Pedagogical Models"
license = {text = "GNU GENERAL PUBLIC LICENSE"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
